# PyGriFE

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  installation.rst  modules.rst  pygrife.GUI.rst  pygrife.extractor_main.rst  pygrife.grizli_functions.rst  pygrife.rst  tutorial.rst
grizliForceExtract/: GUI_main.py  QtImageStackViewer.py  QtImageViewer.py  __init__.py  grizli_extractor.py  grizli_functions.py  qt_utils.py  seg_map_viewer.py
grizliForceExtract/GUI/: GUI_main.py  __init__.py  qt_utils.py
grizliForceExtract/grizli_functions/: FLT_fns.py  catalogue_fns.py
grizliForceExtract/utils_c/: fputs.c  sep_fns.c  sep_fns.pyx
grizliForceExtract/utils_c/sep_fns/: analyse.c  convolve.c  deblend.c  extract.c  extract.h  lutz.c  sep.h  sepcore.h  util.c
pygrife/: __init__.py  extractor_main.py  grizli_extractor.py
pygrife/GUI/: GUI_main.py  __init__.py  qt_utils.py  seg_map_viewer.py
pygrife/grizli_functions/: FLT_fns.py  __init__.py  catalogue_fns.py
src/pygrife/: extractor_main.py
src/pygrife/GUI/: GUI_main.py  qt_utils.py  seg_map_viewer.py
src/pygrife/grizli_functions/: FLT_fns.py  LICENCE.txt  __init__.py  catalogue_fns.py
