[build-system]
requires = ["setuptools>=61.0","oldest-supported-numpy", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "PyGriFE"
version = "0.0.2dev"
authors = [
  { name="Peter Watson", email="peter.watson+pyGFE@inaf.it" },
]
description = "A set of tools to aid in the extraction of sources from NIRISS."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=5.3",
    "numpy>=1.24",
    "matplotlib>=3.6",
    "tqdm>=4.66",
    # "pyqt6>=6.6.0",
    # "qimage2ndarray @ git+https://github.com/hmeine/qimage2ndarray",
    # "grizli [jwst] @ git+https://github.com/gbrammer/grizli",
    # "eazy @ git+https://github.com/gbrammer/eazy-py",
    # "dust_attenuation @ git+https://github.com/gbrammer/dust_attenuation"
]

[project.urls]
"Homepage" = "https://github.com/PJ-Watson/PyGriFE"
"Bug Tracker" = "https://github.com/PJ-Watson/PyGriFE/issues"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '(.*.txt|.*.md|.*.toml|.*.odg)'
preview = true

[tool.isort]
profile = "black"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
    '\._.*$',  # Ignore anything that's private (e.g., starts with _)
    'seg_map_viewer*',
    'qt_utils*',
    'FLT_fns*',
    'GUI_main*',
    'catalogue_fns*',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
